src/objects/QPMS__Manufacturing_Site__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__City1__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Code__c</fullName>
        <label>Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Site to which locations can be assigned</description>
        <inlineHelpText>Parent Site to which locations can be assigned</inlineHelpText>
        <label>Parent Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Manufacturing Sites</relationshipLabel>
        <relationshipName>SiteLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIA-PAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Site_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturing_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__State1__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>To distinguish site or location</description>
        <inlineHelpText>To distinguish site or location</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Manufacturing Site</label>
    <listViews>
        <fullName>QPMS__All_Sites</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Code__c</columns>
        <columns>QPMS__Type__c</columns>
        <columns>QPMS__Active__c</columns>
        <columns>QPMS__Parent_Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sites</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>